--- a/css/main.css
+++ b/css/main.css
@@ -293,7 +293,15 @@ section.info {
       margin-right: auto !important; } }
 
 @media all and (max-height: 460px) {
-  .flip-device {
-    display: flex; } }
+  body {
+    justify-content: flex-start;
+    padding-top: 0.5rem; }
+  section.info {
+    overflow: scroll; }
+  /*
+	.flip-device {
+		display: flex;
+	}
+	*/ }
 
 /*# sourceMappingURL=main.css.map */
