--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -14,6 +14,31 @@ body {
 	}
 }
 
+///// Prealoader /////
+.preloader {
+	position: fixed;
+	top: 0;
+	width: 100vw;
+	height: 100vh;
+	background: white url($css-images-path + 'loader.gif') no-repeat center;
+	background-size: 50px 50px;
+	z-index: 1100;
+
+	progress {
+		position: absolute;
+		top: 0;
+		width: 100%;
+		height: 1px;
+		appearance: none;
+		&::-webkit-progress-bar {
+			background-color: transparent;
+		}
+		&::-webkit-progress-value {
+			background-color: grey;
+		}
+	}
+}
+
 .nav {
 	font-family: 'Roboto', sans-serif;
 	font-size: 10px;
