--- a/src/css/main.css
+++ b/src/css/main.css
@@ -33,8 +33,9 @@ body {
   justify-content: center;
   box-sizing: border-box;
   height: 100vh;
+  background-color: #eaebed;
   font-family: 'Roboto', sans-serif;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.5; }
   body ::-moz-selection {
     background-color: none; }
@@ -122,11 +123,12 @@ ul {
   margin-bottom: 21px; }
 
 .text-column {
+  display: none;
   width: 395.83333px;
   margin-top: 21px;
-  margin-right: 40.58333px;
-  margin-bottom: 42px;
-  margin-left: 40.58333px;
+  margin-right: auto;
+  margin-bottom: 21px;
+  margin-left: auto;
   text-align: center;
   /*
 	::selection {
@@ -136,9 +138,16 @@ ul {
 	*/ }
 
 .app {
+  margin-top: 24px;
   margin-bottom: 48px; }
   .app .counter p {
     margin-right: 10px;
+    text-align: center; }
+  .app .prolog p {
+    font-size: 14px;
+    font-weight: 700;
+    letter-spacing: 0.05em;
+    width: 100%;
     text-align: center; }
   .app .gallery {
     margin-bottom: 12px; }
@@ -149,8 +158,17 @@ ul {
       margin-bottom: 10px;
       float: none;
       position: relative; }
-      .app .gallery .swiper-container.forward {
-        cursor: url(../images/arrow-right.svg), auto; }
+      .app .gallery .swiper-container .button {
+        position: absolute;
+        top: 0;
+        width: 50%;
+        height: 100%;
+        z-index: 10; }
+        .app .gallery .swiper-container .button.rew {
+          cursor: url(../images/arrow-left.svg), pointer; }
+        .app .gallery .swiper-container .button.ff {
+          left: 50%;
+          cursor: url(../images/arrow-right.svg), pointer; }
       .app .gallery .swiper-container .swiper-slide {
         width: 480px;
         height: 560px; }
@@ -185,7 +203,7 @@ section.info {
   overflow: hidden;
   width: 100%;
   height: 2.5rem;
-  background-color: white;
+  background-color: #eaebed;
   z-index: 1000; }
   section.info .trigger {
     margin-bottom: 63px; }
