Jedna kolumna w Info i powrót licznika

--- a/src/scss/_media-queries.scss
+++ b/src/scss/_media-queries.scss
@@ -38,6 +38,11 @@
 	.row {
 		width: 380px;
 	}
+	.title {
+		h1.prolog {
+			width: 380px;
+		}
+	}
 	.app {
 		.counter {
 			.forward-counter {
@@ -82,6 +87,12 @@
 	}
 	section.info {
 		font-size: 12px;
+
+		.nav {
+			button {
+				width: 380px;
+			}
+		}
 		.layout {
 			> * {
 				float: none;
