--- a/src/css/main.css
+++ b/src/css/main.css
@@ -42,27 +42,6 @@ body {
   body ::selection {
     background-color: none; }
 
-.preloader {
-  position: fixed;
-  top: 0;
-  width: 100vw;
-  height: 100vh;
-  background: white url("../images/loader.gif") no-repeat center;
-  background-size: 50px 50px;
-  z-index: 1100; }
-  .preloader progress {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 1px;
-    -webkit-appearance: none;
-       -moz-appearance: none;
-            appearance: none; }
-    .preloader progress::-webkit-progress-bar {
-      background-color: transparent; }
-    .preloader progress::-webkit-progress-value {
-      background-color: grey; }
-
 .nav {
   font-family: 'Roboto', sans-serif;
   font-size: 10px;
@@ -85,7 +64,9 @@ body {
 
 h1 {
   text-transform: uppercase;
-  font-weight: bold;
+  font-weight: normal;
+  letter-spacing: 0.05em;
+  margin-top: 21px;
   margin-bottom: 21px; }
 
 p {
@@ -136,6 +117,39 @@ ul {
 		color: white;
 	}
 	*/ }
+
+.preloader {
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  background: white url("../images/loader.gif") no-repeat center;
+  background-size: 50px 50px;
+  z-index: 1100; }
+  .preloader progress {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 1px;
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none; }
+    .preloader progress::-webkit-progress-bar {
+      background-color: transparent; }
+    .preloader progress::-webkit-progress-value {
+      background-color: grey; }
+
+.title {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%; }
+  .title h1.prolog {
+    width: 477px;
+    margin-left: auto;
+    margin-right: auto !important;
+    float: none;
+    text-align: center; }
 
 .app {
   margin-top: 24px;
@@ -205,10 +219,15 @@ section.info {
   height: 2.5rem;
   background-color: #eaebed;
   z-index: 1000; }
+  section.info .row > * {
+    float: none;
+    margin-left: auto;
+    margin-right: auto !important;
+    width: 477px; }
   section.info .trigger {
-    margin-bottom: 63px; }
+    margin-bottom: 21px; }
     section.info .trigger button {
-      width: 100%;
+      display: block;
       position: relative;
       color: #ff586c;
       font-weight: bold;
@@ -267,6 +286,8 @@ section.info {
 @media all and (max-width: 480px) and (min-width: 361px) {
   .row {
     width: 380px; }
+  .title h1.prolog {
+    width: 380px; }
   .app .counter .forward-counter {
     width: 380px; }
   .app .counter .backward-counter {
@@ -291,6 +312,8 @@ section.info {
     display: none; }
   section.info {
     font-size: 12px; }
+    section.info .nav button {
+      width: 380px; }
     section.info .layout > * {
       float: none;
       margin-left: auto;
