--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -17,31 +17,6 @@ body {
 	}
 }
 
-///// Prealoader /////
-.preloader {
-	position: fixed;
-	top: 0;
-	width: 100vw;
-	height: 100vh;
-	background: white url($css-images-path + 'loader.gif') no-repeat center;
-	background-size: 50px 50px;
-	z-index: 1100;
-
-	progress {
-		position: absolute;
-		top: 0;
-		width: 100%;
-		height: 1px;
-		appearance: none;
-		&::-webkit-progress-bar {
-			background-color: transparent;
-		}
-		&::-webkit-progress-value {
-			background-color: grey;
-		}
-	}
-}
-
 .nav {
 	font-family: 'Roboto', sans-serif;
 	font-size: 10px;
@@ -71,7 +46,9 @@ body {
 
 h1 {
 	text-transform: uppercase;
-	font-weight: bold;
+	font-weight: normal;
+	letter-spacing: 0.05em;
+	margin-top: $gmb;
 	margin-bottom: $gmb;
 }
 p {
@@ -136,6 +113,45 @@ ul {
 		color: white;
 	}
 	*/
+}
+
+///// Prealoader /////
+.preloader {
+	position: fixed;
+	top: 0;
+	width: 100vw;
+	height: 100vh;
+	background: white url($css-images-path + 'loader.gif') no-repeat center;
+	background-size: 50px 50px;
+	z-index: 1100;
+
+	progress {
+		position: absolute;
+		top: 0;
+		width: 100%;
+		height: 1px;
+		appearance: none;
+		&::-webkit-progress-bar {
+			background-color: transparent;
+		}
+		&::-webkit-progress-value {
+			background-color: grey;
+		}
+	}
+}
+
+.title {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	h1.prolog {
+		width: grid-columns(6);
+		margin-left: auto;
+		margin-right: auto !important;
+		float: none;
+		text-align: center;
+	}
 }
 
 .app {
@@ -249,10 +265,17 @@ section.info {
 	background-color: rgb(234, 235, 237);
 	z-index: 1000;
 
+	.row > * {
+		float: none;
+		margin-left: auto;
+		margin-right: auto !important;
+		width: grid-columns(6);
+	}
+
 	.trigger {
-		margin-bottom: $gmb * 3;
+		margin-bottom: $gmb * 1;
 		button {
-			width: 100%;
+			display: block;
 			position: relative;
 			color: $malina;
 			font-weight: bold;
