--- a/src/css/main.css
+++ b/src/css/main.css
@@ -234,17 +234,6 @@ section.info {
       line-height: 2.5rem; }
       section.info .trigger button:hover {
         color: black; }
-      section.info .trigger button .close {
-        width: 10px;
-        font-weight: bold;
-        text-align: center;
-        color: black;
-        position: absolute;
-        top: 0;
-        right: 10px;
-        display: none; }
-        section.info .trigger button .close:hover {
-          color: #ff586c; }
   section.info .layout h1 {
     margin-bottom: 0; }
   section.info .layout > * {
@@ -325,6 +314,8 @@ section.info {
     padding-top: 0.5rem; }
   .row {
     width: 320px; }
+  .title h1.prolog {
+    width: 320px; }
   .app .counter .forward-counter {
     width: 320px; }
   .app .counter .backward-counter {
@@ -350,6 +341,8 @@ section.info {
     display: none; }
   section.info {
     font-size: 12px; }
+    section.info .nav button {
+      width: 320px; }
     section.info .layout > * {
       float: none;
       width: 310px;
