--- a/src/scss/_vendor.scss
+++ b/src/scss/_vendor.scss
@@ -1,6 +1,7 @@
 /* VENDORS */
 
 //@import '../../node_modules/normalize-scss/sass/normalize/import-now';
-@import '../../node_modules/swiper/dist/css/swiper.min.css';
+// @import '../../node_modules/swiper/dist/css/swiper.min.css';
+@import '../../node_modules/swiper/swiper-bundle.min.css';
 // @import '../node_modules/owl.carousel/dist/assets/owl.carousel.min.css';
 //@import '../node_modules/owl.carousel/src/scss/owl.carousel';
